spacing fixes

--- a/css/likemoji.css
+++ b/css/likemoji.css
@@ -66,11 +66,15 @@
   background-color: #00affb;
   margin-top: 50px;
   border: 2px solid white;
-/*  margin:auto;*/
- /* display: block;
+  /*margin:auto;*/
+  display: block;
   margin-right:auto;
-  margin-left: auto;*/
+  margin-left: auto;
 
+}
+
+.btn:last-child, a.store:last-child {
+    margin-right: auto;
 }
 
 .kioskImg {
@@ -93,3 +97,10 @@ hr  {
    border: 1px solid #00affb;
  
 }
+
+.extraPad {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+
